--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,59 @@
-version: 2.1
+executors:
+  unity-executor:
+    docker:
+      - image: unityci/editor:ubuntu-2022.3.32f1-android-3
+    resource_class: large
 
-orbs:
-  unity: game-ci/unity@1.7.1
+jobs:
+  build:
+    executor: unity-executor
+    context: DreamVillageUnityInfo
+    steps:
+      - checkout
+
+      # Build Projet
+      - run:
+          name: Build project
+          command: |
+            # Activer la licence Unity
+            unity-editor \
+              -batchmode \
+              -nographics \
+              -silent-crashes \
+              -logFile /dev/stdout \
+              -username "$UNITY_EMAIL" \
+              -password "$UNITY_PASSWORD" \
+              -serial "$UNITY_SERIAL" \
+              -projectPath $(pwd) \
+              -buildTarget Android \
+              -quit
+            
+            # Lancer la build
+            unity-editor \
+              -batchmode \
+              -nographics \
+              -silent-crashes \
+              -logFile /dev/stdout \
+              -projectPath $(pwd) \
+              -buildTarget Android \
+              -quit
+
+      # Upload artifact
+      - run:
+          name: Archive Build
+          command: |
+            mkdir -p /tmp/build
+            cp -r build/Android/Android.apk /tmp/build/
+      - store_artifacts:
+          path: /tmp/build
+          destination: Build
 
 workflows:
-  build-unity-project:
+  version: 2
+  build-workflow:
     jobs:
-      - unity/build:
-          name: 'build-android'
-          step-name: 'Build Android'
-          unity-serial-var-name: 'UNITY_SERIAL' 
-          unity-username-var-name: 'UNITY_USERNAME'
-          unity-password-var-name: 'UNITY_PASSWORD'
-          executor:
-            name: 'unity/ubuntu'
-            target_platform: 'android'
-            editor_version: '2022.3.3f1'
-            resource_class: 'large'
-          project-path: .
-          build-target: 'Android'
+      - build:
           context: DreamVillageUnityInfo
-                                  
-          
+          filters:
+            branches:
+              only: develop
