--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,11 @@ jobs:
     steps:
       - checkout
 
+      - restore_cache:
+          keys:
+            - unity-cache-{{ checksum "Packages/manifest.json" }}
+            - unity-cache-v1
+
       # Build Projet
       - run:
           name: Build project
@@ -41,16 +46,34 @@ jobs:
               -customBuildPath /project/build/Android/Android.apk \
               -quit
 
+      - save_cache:
+          paths:
+            - /root/.cache/unity3d
+            - /root/.local/share/unity3d
+            - /project/Library
+          key: unity-cache-{{ checksum "Packages/manifest.json" }}
+
       # Upload artifact
       - run:
           name: Archive Build
           command: |
             mkdir -p /tmp/build
-            cp -r /project/build/Android/Android.apk /tmp/build/
+            cp -r build/Android/Android.apk /tmp/build/
             
       - store_artifacts:
           path: /tmp/build
           destination: Build
+
+      - restore_cache:
+          keys:
+            - gradle-cache-{{ checksum "build.gradle" }}
+            - gradle-cache-v1
+
+      - save_cache:
+          paths:
+            - ~/.gradle/caches
+            - ~/.gradle/wrapper
+          key: gradle-cache-{{ checksum "build.gradle" }}
 
 workflows:
   version: 2
