--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
           name: Archive Build
           command: |
             mkdir -p /tmp/build
-            cp -r /build/Android/Android.apk /tmp/build/
+            cp -r /project/build/Android/Android.apk /tmp/build/
             
       - store_artifacts:
           path: /tmp/build
