--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,16 @@ jobs:
 
       - run: 
           name: Lister les fichiers .apk
-          command: find /project \( -path /proc -o -path /sys -o -path /dev \) -prune -o -type f -name "*.apk" -print -quit | grep -q .
+          command: |
+              found_apk=$(find /project \( -path /proc -o -path /sys -o -path /dev \) -prune -o -type f -name "*.apk")
+              echo "Fichiers APK trouvés :"
+              echo "$found_apk"
+              if [ -n "$found_apk" ]; then
+                echo "Le fichier .apk a été trouvé."
+              else
+                echo "Aucun fichier .apk trouvé."
+                exit 1
+              fi
             
       # Upload artifact
       - run:
