--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,47 @@ jobs:
           path: /tmp/build
           destination: Build
 
+      # Upload to Dropbox
+      - run:
+          name: Dropbox Large File Uploader
+          command: |
+            curl -X POST https://content.dropboxapi.com/2/files/upload \
+              --header "Authorization: Bearer ${DROPBOX_REFRESH_TOKEN}" \
+              --header "Dropbox-API-Arg: {\"path\": \"/Build/Android.apk\", \"mode\": \"overwrite\", \"autorename\": true, \"mute\": false}" \
+              --header "Content-Type: application/octet-stream" \
+              --data-binary @builds/Android/Android.apk
+
+      # Envoyer le lien sur Discord
+      - run:
+          name: Envoyer le lien sur Discord
+          command: |
+            DISCORD_WEBHOOK_URL="${DISCORD_WEBHOOK_URL}"
+
+            MESSAGE_CONTENT="🚀 **Nouvelle build disponible !**\n🎮 Téléchargez la dernière version de l'APK ici :\n🔗 [📥 Télécharger](https://www.dropbox.com/home/Applications/DreamVillage-Build/Build)"
+
+            curl -s -X POST "$DISCORD_WEBHOOK_URL" \
+              -H "Content-Type: application/json" \
+              -d "{\"content\": \"$MESSAGE_CONTENT\"}"
+
+      # Supprimer les anciens messages Discord
+      - run:
+          name: Supprimer les anciens messages du webhook
+          command: |
+            DISCORD_WEBHOOK_URL="${DISCORD_WEBHOOK_URL}"
+      
+            RESPONSE=$(curl -s "$DISCORD_WEBHOOK_URL/messages?limit=10")
+            echo "Réponse de l'API Discord : $RESPONSE"  # Ajout du débogage
+      
+            MESSAGE_ID=$(echo "$RESPONSE" | grep -o '"id":"\([^"]*\)"' | head -n 1 | sed 's/"id":"\([^"]*\)"/\1/')
+      
+            if [[ -z "$MESSAGE_ID" ]]; then
+              echo "❌ Aucun message trouvé ou réponse invalide"
+              exit 0
+            fi
+      
+            curl -X DELETE "$DISCORD_WEBHOOK_URL/messages/$MESSAGE_ID"
+            sleep 1
+
 workflows:
   version: 2
   build-workflow:
